--- a/style.css
+++ b/style.css
@@ -1,3 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: hsl(212, 45%, 89%) ;
+    min-height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Outfit', sans-serif;
+    padding: 2rem 1rem;
+}
+img {
+    width: 100%;
+    border-radius: 16px;
+}
+
+.container {
+    background-color: white;
+    width: 100%;
+    max-width: 320px;
+    padding: 1rem 1.2rem;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+}
+
+.container h1 {
+    font-size: 1.6rem;
+    color: hsl(218, 44%, 22%);
+    
+}
+
+.container p {
+    font-size: 0.9rem;
+    color: hsl(220, 15%, 55%);
+    padding-bottom: 0.6rem;
+    
+}
+
+
+.attribution {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 11px;
+    color: hsl(218, 44%, 22%);
+    width: 100%;
+    text-align: center;
+    
+}
+
+.attribution a {
+    text-decoration: none;
+    color: hsl(218, 44%, 22%);
+}
+
+@media screen and (max-width:640px) {
+    body {
+        background-color: pink;
+    }
 }
